--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./main.js"></script>
+    <style>
+      .carousel {
+        display: flex;
+        width: 500px;
+        height: 300px;
+        margin: auto;
+        white-space: nowrap;
+        outline: solid 1px blue;
+        overflow: hidden;
+      }
+      .carousel > img {
+        width: 500px;
+        height: 300px;
+      }
+    </style>
   </head>
   <body></body>
+  <script src="./main.js"></script>
 </html>
